force-app/main/default/objects/Property_Asset__c/Property_Asset__c.object-meta.xml
<CustomObject>
    <label>Property Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>