force-app/main/default/objects/Property_Asset__c/fields/Argus_Value__c.field-meta.xml
<CustomField>
    <fullName>Argus_Value__c</fullName>
    <label>Argus Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>