force-app/main/default/objects/Property_Asset__c/fields/Final_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Purchase_Price__c</fullName>
    <label>Final Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>