force-app/main/default/objects/Property_Asset__c/fields/Is_Ready__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready__c</fullName>
    <formula>IF(ISPICKVAL(Argus_Signal__c, &quot;Sell Now&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ready</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>