force-app/main/default/objects/Property_Asset__c/fields/NOI__c.field-meta.xml
<CustomField>
    <fullName>NOI__c</fullName>
    <label>NOI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>