force-app/main/default/objects/Property_Asset__c/fields/Projected_Value_at_Peak__c.field-meta.xml
<CustomField>
    <fullName>Projected_Value_at_Peak__c</fullName>
    <description>Projected asset value at the Peak Sell Date. Used by the Sell Meter list.</description>
    <label>Projected Value at Peak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>