force-app/main/default/objects/Property_Asset__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <formula>Name</formula>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>