force-app/main/default/objects/Property_Asset__c/fields/Sell_Readiness_Band__c.field-meta.xml
<CustomField>
    <fullName>Sell_Readiness_Band__c</fullName>
    <formula>CASE(TEXT(Argus_Signal__c), &quot;Sell Now&quot;, &quot;Sell now&quot;, &quot;12 mo&quot;, &quot;Getting Close&quot;, &quot;Hold&quot;, &quot;Hold - Not yet&quot;, &quot;&amp;#8212;&quot;)</formula>
    <label>Sell Readiness Band</label>
    <type>Text</type>
</CustomField>