force-app/main/default/objects/Property_Asset__c/fields/Sell_Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Sell_Readiness_Score__c</fullName>
    <label>Sell Readiness Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>