force-app/main/default/objects/Property_Asset__c/fields/Target_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Sale_Price__c</fullName>
    <label>Target Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>