force-app/main/default/objects/Property_Asset__c/fields/Vacant_Area__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Area__c</fullName>
    <label>Vacant Area (Sq Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>